<resources>
    <string name="app_name">Capst</string>
    <string name="facebook_app_id">279267882980197</string>
    <string name="fb_login_protocol_scheme">fb279267882980197</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인</string>
    <string name="signup_email">회원가입</string>
    <string name="signin_google">구글 계정 로그인</string>
    <string name="signin_facebook">페이스북 계정 로그인</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">Signout</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실페</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력하십시오</string>
    <string name="create_account">계정 생성</string>
    <string name="to_login">로그인 화면으로</string>
    <string name="signup_private">개인(구직) 회원가입</string>
    <string name="signup_youtuber">유튜버(구인홍보) 회원가입</string>
    <string name="signup_company">회사(구인) 회원가입</string>


    <!-- Signup -->


    <!-- Bottom Navigation View -->
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="gallery">갤러리</string>
    <string name="favorite">좋아요</string>
    <string name="account">계정</string>

    <!-- Account -->
    <string name="post">게시글 작성</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
