<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView android:layout_above="@+id/signin_layout"
               android:layout_alignParentTop="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/logo_title" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
               android:layout_marginBottom="10dp" android:layout_marginTop="0dp"/>

    <LinearLayout android:id="@+id/signin_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:orientation="vertical">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginLeft="20dp"
                                                           android:layout_marginRight="20dp">
                <EditText android:id="@+id/email_edittext"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/email" android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginLeft="20dp"
                                                           android:layout_marginRight="20dp">
                <EditText android:inputType="textPassword"
                          android:id="@+id/password_edittext"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="15dp" android:layout_marginBottom="30dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" android:layout_marginBottom="5dp" android:minHeight="44dip"
                    android:minWidth="88dip">
                <Button
                        android:text="@string/signin_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/email_login_button"
                        android:layout_weight="1" android:theme="@style/ButtonStyle" android:background="#FFEB3B"/>
                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <Button
                        android:text="@string/signup_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/email_signup_button"
                        android:layout_weight="1"
                        android:theme="@style/ButtonStyle" android:background="#FFEB3B"/>
            </LinearLayout>
        </LinearLayout>
        <!--<Button android:id="@+id/email_login_button"-->
        <!--android:text="@string/signin_email"-->
        <!--android:theme="@style/ButtonStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginBottom="35dp"/>-->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_alignStart="@+id/signin_layout">
            <Button android:id="@+id/google_sign_in_button"
                    android:text="@string/signin_google"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_signin_google"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"/>
            <Button android:id="@+id/facebook_login_button"
                    android:text="@string/signin_facebook"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_signin_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="80dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>